crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__array_literal_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Literal(
                List(
                    [
                        Literal(
                            Int(
                                0,
                            ),
                        ),
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                List(
                    [
                        Literal(
                            Int(
                                0,
                            ),
                        ),
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                List(
                    [
                        Literal(
                            Int(
                                0,
                            ),
                        ),
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
}
