crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__assign_expr-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: None,
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Add,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Sub,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Div,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Mul,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Rem,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Pow,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                    op: Some(
                        Maybe,
                    ),
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
    ],
}
