crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__assign_expr-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "report(input, e)"
---
[31merror[0m: invalid assignment target
[34m>[0m code:1
[34m|[0m 
[34m|[0m a() = b[31;4m_[0m
[34m|[0m 

