crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__binary_expr-16.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: "c",
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: "d",
                        },
                    ),
                },
            ),
        ),
    ],
}
